Source/WebCore/platform/graphics/win/FontCustomPlatformData.h
@@ -37,6 +37,7 @@ typedef struct CGFont* CGFontRef;
 namespace WebCore {
 
 class FontDescription;
+class FontMemoryResource;
 class SharedBuffer;
 struct FontSelectionSpecifiedCapabilities;
 struct FontVariantSettings;
@@ -48,20 +49,13 @@ struct FontCustomPlatformData {
     WTF_MAKE_FAST_ALLOCATED;
     WTF_MAKE_NONCOPYABLE(FontCustomPlatformData);
 public:
-    FontCustomPlatformData(HANDLE fontReference, const String& name, FontPlatformData::CreationData&& creationData)
-        : fontReference(fontReference)
-        , name(name)
-        , creationData(WTFMove(creationData))
-    {
-    }
-
+    FontCustomPlatformData(const String& name, FontPlatformData::CreationData&&);
     ~FontCustomPlatformData();
 
     FontPlatformData fontPlatformData(const FontDescription&, bool bold, bool italic, const FontFeatureSettings&, FontSelectionSpecifiedCapabilities);
 
     static bool supportsFormat(const String&);
 
-    HANDLE fontReference;
     String name;
 #if USE(CORE_TEXT)
     RetainPtr<CTFontDescriptorRef> fontDescriptor;
