Source/WebCore/PlatformWin.cmake
@@ -108,6 +108,8 @@ list(APPEND WebCore_PRIVATE_FRAMEWORK_HEADERS
 
     page/win/FrameWin.h
 
+    platform/graphics/opentype/FontMemoryResource.h
+
     platform/graphics/win/DIBPixelData.h
     platform/graphics/win/FontCustomPlatformData.h
     platform/graphics/win/FullScreenController.h
